src/Pdraw2Parser.py
# Generated from Pdraw2.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Pdraw2Parser ( Parser ):

    grammarFileName = "Pdraw2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'position'", "'('", "','", "')'", 
                     "'down'", "'up'", "'forward'", "'backward'", "'left'", 
                     "'\\u00BA'", "'right'", "'define'", "'pen'", "'{'", 
                     "'}'", "'color'", "'='", "'orientation'", "'thickness'", 
                     "'pressure'", "'label'", "'int'", "'+'", "'-'", "'*'", 
                     "'/'", "'while'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "COLOR", 
                      "STRING", "NUMBER", "DIGIT", "WHITESPACE", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_command = 2
    RULE_position_command = 3
    RULE_pen_control = 4
    RULE_move_command = 5
    RULE_turn_command = 6
    RULE_define_command = 7
    RULE_pen_attribute = 8
    RULE_variable_declaration = 9
    RULE_assignment = 10
    RULE_expression = 11
    RULE_while_loop = 12
    RULE_condition = 13

    ruleNames =  [ "program", "statement", "command", "position_command", 
                   "pen_control", "move_command", "turn_command", "define_command", 
                   "pen_attribute", "variable_declaration", "assignment", 
                   "expression", "while_loop", "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    ID=35
    COLOR=36
    STRING=37
    NUMBER=38
    DIGIT=39
    WHITESPACE=40
    COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.StatementContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Pdraw2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34636576708) != 0):
                self.state = 28
                self.statement()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(Pdraw2Parser.CommandContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(Pdraw2Parser.Variable_declarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(Pdraw2Parser.AssignmentContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(Pdraw2Parser.While_loopContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Pdraw2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 6, 7, 8, 9, 10, 12, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.command()
                self.state = 35
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.variable_declaration()
                self.state = 38
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.assignment()
                self.state = 41
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.while_loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def position_command(self):
            return self.getTypedRuleContext(Pdraw2Parser.Position_commandContext,0)


        def pen_control(self):
            return self.getTypedRuleContext(Pdraw2Parser.Pen_controlContext,0)


        def move_command(self):
            return self.getTypedRuleContext(Pdraw2Parser.Move_commandContext,0)


        def turn_command(self):
            return self.getTypedRuleContext(Pdraw2Parser.Turn_commandContext,0)


        def define_command(self):
            return self.getTypedRuleContext(Pdraw2Parser.Define_commandContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = Pdraw2Parser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.position_command()
                pass
            elif token in [6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.pen_control()
                pass
            elif token in [8, 9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.move_command()
                pass
            elif token in [10, 12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.turn_command()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.define_command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Position_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_position_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosition_command" ):
                listener.enterPosition_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosition_command" ):
                listener.exitPosition_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosition_command" ):
                return visitor.visitPosition_command(self)
            else:
                return visitor.visitChildren(self)




    def position_command(self):

        localctx = Pdraw2Parser.Position_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_position_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(Pdraw2Parser.T__1)
            self.state = 54
            self.match(Pdraw2Parser.T__2)
            self.state = 55
            self.expression(0)
            self.state = 56
            self.match(Pdraw2Parser.T__3)
            self.state = 57
            self.expression(0)
            self.state = 58
            self.match(Pdraw2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pen_controlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_pen_control

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPen_control" ):
                listener.enterPen_control(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPen_control" ):
                listener.exitPen_control(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPen_control" ):
                return visitor.visitPen_control(self)
            else:
                return visitor.visitChildren(self)




    def pen_control(self):

        localctx = Pdraw2Parser.Pen_controlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pen_control)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_move_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove_command" ):
                listener.enterMove_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove_command" ):
                listener.exitMove_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove_command" ):
                return visitor.visitMove_command(self)
            else:
                return visitor.visitChildren(self)




    def move_command(self):

        localctx = Pdraw2Parser.Move_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_move_command)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(Pdraw2Parser.T__7)
                self.state = 63
                self.expression(0)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(Pdraw2Parser.T__8)
                self.state = 65
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Turn_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_turn_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTurn_command" ):
                listener.enterTurn_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTurn_command" ):
                listener.exitTurn_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTurn_command" ):
                return visitor.visitTurn_command(self)
            else:
                return visitor.visitChildren(self)




    def turn_command(self):

        localctx = Pdraw2Parser.Turn_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_turn_command)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(Pdraw2Parser.T__9)
                self.state = 69
                self.expression(0)
                self.state = 70
                self.match(Pdraw2Parser.T__10)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(Pdraw2Parser.T__11)
                self.state = 73
                self.expression(0)
                self.state = 74
                self.match(Pdraw2Parser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Pdraw2Parser.ID, 0)

        def pen_attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.Pen_attributeContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.Pen_attributeContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_define_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_command" ):
                listener.enterDefine_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_command" ):
                listener.exitDefine_command(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_command" ):
                return visitor.visitDefine_command(self)
            else:
                return visitor.visitChildren(self)




    def define_command(self):

        localctx = Pdraw2Parser.Define_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_define_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Pdraw2Parser.T__12)
            self.state = 79
            self.match(Pdraw2Parser.T__13)
            self.state = 80
            self.match(Pdraw2Parser.ID)
            self.state = 81
            self.match(Pdraw2Parser.T__14)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7995396) != 0):
                self.state = 82
                self.pen_attribute()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(Pdraw2Parser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pen_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLOR(self):
            return self.getToken(Pdraw2Parser.COLOR, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,i)


        def STRING(self):
            return self.getToken(Pdraw2Parser.STRING, 0)

        def getRuleIndex(self):
            return Pdraw2Parser.RULE_pen_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPen_attribute" ):
                listener.enterPen_attribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPen_attribute" ):
                listener.exitPen_attribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPen_attribute" ):
                return visitor.visitPen_attribute(self)
            else:
                return visitor.visitChildren(self)




    def pen_attribute(self):

        localctx = Pdraw2Parser.Pen_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pen_attribute)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(Pdraw2Parser.T__16)
                self.state = 91
                self.match(Pdraw2Parser.T__17)
                self.state = 92
                self.match(Pdraw2Parser.COLOR)
                self.state = 93
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(Pdraw2Parser.T__1)
                self.state = 95
                self.match(Pdraw2Parser.T__17)
                self.state = 96
                self.match(Pdraw2Parser.T__2)
                self.state = 97
                self.expression(0)
                self.state = 98
                self.match(Pdraw2Parser.T__3)
                self.state = 99
                self.expression(0)
                self.state = 100
                self.match(Pdraw2Parser.T__4)
                self.state = 101
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(Pdraw2Parser.T__18)
                self.state = 104
                self.match(Pdraw2Parser.T__17)
                self.state = 105
                self.expression(0)
                self.state = 106
                self.match(Pdraw2Parser.T__10)
                self.state = 107
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(Pdraw2Parser.T__19)
                self.state = 110
                self.match(Pdraw2Parser.T__17)
                self.state = 111
                self.expression(0)
                self.state = 112
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.match(Pdraw2Parser.T__20)
                self.state = 115
                self.match(Pdraw2Parser.T__17)
                self.state = 116
                self.expression(0)
                self.state = 117
                self.match(Pdraw2Parser.T__0)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 6)
                self.state = 119
                self.match(Pdraw2Parser.T__21)
                self.state = 120
                self.match(Pdraw2Parser.T__17)
                self.state = 121
                self.match(Pdraw2Parser.STRING)
                self.state = 122
                self.match(Pdraw2Parser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Pdraw2Parser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = Pdraw2Parser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(Pdraw2Parser.T__22)
            self.state = 126
            self.match(Pdraw2Parser.ID)
            self.state = 127
            self.match(Pdraw2Parser.T__17)
            self.state = 128
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Pdraw2Parser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = Pdraw2Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(Pdraw2Parser.ID)
            self.state = 131
            self.match(Pdraw2Parser.T__17)
            self.state = 132
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(Pdraw2Parser.NUMBER, 0)

        def ID(self):
            return self.getToken(Pdraw2Parser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Pdraw2Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.state = 135
                self.match(Pdraw2Parser.NUMBER)
                pass
            elif token in [35]:
                self.state = 136
                self.match(Pdraw2Parser.ID)
                pass
            elif token in [3]:
                self.state = 137
                self.match(Pdraw2Parser.T__2)
                self.state = 138
                self.expression(0)
                self.state = 139
                self.match(Pdraw2Parser.T__4)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Pdraw2Parser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 143
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 144
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 251658240) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 145
                    self.expression(3) 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(Pdraw2Parser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.StatementContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = Pdraw2Parser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_while_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(Pdraw2Parser.T__27)
            self.state = 152
            self.match(Pdraw2Parser.T__2)
            self.state = 153
            self.condition()
            self.state = 154
            self.match(Pdraw2Parser.T__4)
            self.state = 155
            self.match(Pdraw2Parser.T__14)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34636576708) != 0):
                self.state = 156
                self.statement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(Pdraw2Parser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Pdraw2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Pdraw2Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return Pdraw2Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = Pdraw2Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.expression(0)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33822867456) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 166
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[11] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         




